# Voxarium

./: README.md
Voxarium/: CMakeLists.txt
Voxarium/Vox/include/: Chunk.hpp  Octree.hpp  Point3D.hpp
Voxarium/Vox/shaders/: 3D.vs.glsl  color2D.vs.glsl  grey2D.fs.glsl  normals.fs.glsl  transfo_matrix.vs.glsl
Voxarium/Vox/src/: Chunk.cpp  Octree.cpp  Point3D.cpp  main.cpp
Voxarium/code_etudiants/: Image.cpp  Image.hpp  ImageException.cpp  ImageException.hpp  ImageRGB.cpp  ImageRGB.hpp  Makefile  ioJPG.cpp  ioJPG.hpp  main.cpp
Voxarium/glimac/include/glimac/: SDLWindowManager.hpp  glm.hpp
Voxarium/glimac/src/: Image.cpp  SDLWindowManager.cpp
vox_temp/: CMakeCache.txt  Makefile  Voxarium  cmake_install.cmake
vox_temp/Vox/: Makefile  cmake_install.cmake
vox_temp/Vox/shaders/: color2D.fs.glsl  halo2D.fs.glsl  halo2D.vs.glsl  transfo2D.vs.glsl  transfosMatrix.vs.glsl
vox_temp/glimac/: Makefile  cmake_install.cmake
